--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,16 @@
       <artifactId>hibernate-validator</artifactId>
       <version>8.0.2.Final</version>
     </dependency>
+    <dependency>
+      <groupId>org.modelmapper</groupId>
+      <artifactId>modelmapper</artifactId>
+      <version>3.2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-text</artifactId>
+      <version>1.10.0</version>
+    </dependency>
 
   </dependencies>
 
